--- a/ui.apps/src/main/content/jcr_root/apps/msDemo/components/columncontrol/columncontrol.html
+++ b/ui.apps/src/main/content/jcr_root/apps/msDemo/components/columncontrol/columncontrol.html
@@ -1,4 +1,4 @@
-<div class="cmp-columncontrol container my-3" data-sly-use.colcontrol="com.adobe.dramix.core.models.ColumnControl" data-sly-use.templates="core/wcm/components/commons/v1/templates.html">
+<div class="cmp-columncontrol container my-3" data-sly-use.colcontrol="com.ms.demo.aem.core.models.ColumnControl" data-sly-use.templates="core/wcm/components/commons/v1/templates.html">
 	<div class="row">
 		<div class="col-md-${colcontrol.columnCount} col-sm-12" data-sly-repeat="${colcontrol.list}">
 			<div class="column-inner">
